--- a/MuralAlunos.html
+++ b/MuralAlunos.html
@@ -163,7 +163,7 @@
 
                 <div style="display: flex; gap: 10px; flex-wrap: wrap;">
                 <div style="text-align: center; border: 1px solid #BFD0EA; padding: 5px;">
-                <img src="cesa.jpg" style="border: 2px solid #FFF; width:400px; height:300px;"> 
+                <img src="cesa.JPG" style="border: 2px solid #FFF; width:400px; height:300px;"> 
 		<span style="font-size: 12px; font-weight: ;margin-top:150px;"> Nome: Cesa Dirceu | Serie: 8° | Ano Ano: 2000</span>                        
                     </div>
                
