--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <center><img src="escola.jpg" style="border-radius: 50%; border: 5px solid white;margin-bottom:5px;"></center>
             
             <a href="#inicio">Página Inicial</a>
-            <a href="muralAlunos.html">👨🏻‍🎓 ex-Alunos  </a>
+            <a href="MuralAlunos.html">👨🏻‍🎓 ex-Alunos  </a>
 	    <a href="MuralProfessores.html">👨🏻‍🏫 Professores </a>
             <a href="Recados.html">📩 Recados </a>
 	    <a href="#recados">🎬  Videos </a>
@@ -172,7 +172,7 @@
                 <div class="secao-titulo">Escola Estadual Senador Manuel Severiano Nunes 🌞</div>
                 <div style="display: flex; gap: 10px; flex-wrap: wrap;">
                     <div style="text-align: center; border: 1px solid #BFD0EA; padding: 5px;">
-                        <img src="sala.jpg" style="border: 2px solid #FFF;width:750px; heigth:750px;">
+                        <img src="sala.JPG" style="border: 2px solid #FFF;width:750px; heigth:750px;">
                         
                     </div>
                 </div>
