--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     <div class="container">
         <nav>
-            <center><img src="escola.jpg" style="border-radius: 50%; border: 5px solid white;margin-bottom:5px;"></center>
+            <center><img src="escola.JPG" style="border-radius: 50%; border: 5px solid white;margin-bottom:5px;"></center>
             
             <a href="#inicio">Página Inicial</a>
             <a href="MuralAlunos.html">👨🏻‍🎓 ex-Alunos  </a>
