--- a/MuralAlunos.html
+++ b/MuralAlunos.html
@@ -137,7 +137,7 @@
 
     <div class="container">
         <nav>
-            <center><img src="escola.jpg" style="border-radius: 50%; border: 5px solid #FFF;margin-bottom:10px;"></center>
+            <center><img src="escola.JPG" style="border-radius: 50%; border: 5px solid #FFF;margin-bottom:10px;"></center>
             
              <a href="#inicio">Página Inicial</a>
             <a href="file:///C:/Users/Administrador/Desktop/muralFotos.html">👨🏻‍🎓 ex-Alunos  </a>
