--- a/MuralProfessores.html
+++ b/MuralProfessores.html
@@ -137,12 +137,12 @@
 
     <div class="container">
         <nav>
-            <center><img src="escola.jpg" style="border-radius: 50%; border: 5px solid #FFF;margin-bottom:10px;"></center>
+            <center><img src="escola.JPG" style="border-radius: 50%; border: 5px solid #FFF;margin-bottom:10px;"></center>
             
-             <a href="#inicio">Página Inicial</a>
-            <a href="file:///C:/Users/Administrador/Desktop/muralFotos.html">👨🏻‍🎓 ex-Alunos  </a>
-	    <a href="file:///C:/Users/Administrador/Desktop/MuralProfessores.html">👨🏻‍🏫 Professores </a>
-            <a href="file:///C:/Users/Administrador/Desktop/Recados.html#inicio">📩 Recados </a>
+             <a href="index.html">Página Inicial</a>
+            <a href="MuralFotos.html">👨🏻‍🎓 ex-Alunos  </a>
+	    <a href="MuralProfessores.html">👨🏻‍🏫 Professores </a>
+            <a href="Recados.html#inicio">📩 Recados </a>
 	    <a href="#recados">🎬  Videos </a>
 	    <a href="#recados">📌  Eventos </a>
         </nav>
